log
Wed, Mar 26, 2025  9:03:34 AM: 
 tests:  0|6
total_score: 0/70
25021aa
Wed, Mar 26, 2025  9:04:24 AM: 
 list.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
147b81d
Wed, Mar 26, 2025  9:05:46 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
b8b1db2
Wed, Mar 26, 2025  9:07:47 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d711348
Wed, Mar 26, 2025  9:09:45 AM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
f59da12
